python_x86_information/parser/intel_operation_languageParser.py
# Generated from intel_operation_language.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class intel_operation_languageParser ( Parser ):

    grammarFileName = "intel_operation_language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'?'", "':'", "','", "'.'", "':='", "'='", "'=='", 
                     "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", 
                     "'&'", "'|'", "'&&'", "'||'", "'^'", "'XOR'", "'AND'", 
                     "'!'", "'~'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
                     "'>>'", "'IF'", "'FI'", "'ELSE'", "'FOR'", "'to'", 
                     "'TO'", "'ENDFOR'", "'DO'", "'WHILE'", "'OD'", "'CASE'", 
                     "'ESAC'", "'OF'", "'DEFINE'", "'RETURN'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "LeftParen", 
                      "RightParen", "CurlyLeft", "CurlyRight", "Question", 
                      "Colon", "Comma", "Dot", "Assign", "Equal", "EqualEqual", 
                      "Plus", "PlusPlus", "Minus", "MinusMinus", "Star", 
                      "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
                      "XOR", "AND", "Not", "Tilde", "Less", "LessEqual", 
                      "Greater", "GreaterEqual", "LeftShift", "RightShift", 
                      "IF", "FI", "ELSE", "FOR", "TO", "TO2", "ENDFOR", 
                      "DO", "WHILE", "OD", "CASE", "ESAC", "OF", "DEFINE", 
                      "RETURN", "NAME", "INT", "LineComment", "WS" ]

    RULE_prog = 0
    RULE_expression = 1
    RULE_definitionExpression = 2
    RULE_ternaryoperator = 3
    RULE_ifExpression = 4
    RULE_forExpression = 5
    RULE_forExpressionExpression = 6
    RULE_doWhileExpression = 7
    RULE_doWhileExpressionExpression = 8
    RULE_functionExpression = 9
    RULE_functionExpressionArgument = 10
    RULE_caseExpression = 11
    RULE_caseExpressionExpression = 12
    RULE_defineExpression = 13
    RULE_returnExpression = 14
    RULE_comparison = 15
    RULE_variable = 16
    RULE_accessoperator = 17
    RULE_accessoperatorname = 18
    RULE_operator = 19

    ruleNames =  [ "prog", "expression", "definitionExpression", "ternaryoperator", 
                   "ifExpression", "forExpression", "forExpressionExpression", 
                   "doWhileExpression", "doWhileExpressionExpression", "functionExpression", 
                   "functionExpressionArgument", "caseExpression", "caseExpressionExpression", 
                   "defineExpression", "returnExpression", "comparison", 
                   "variable", "accessoperator", "accessoperatorname", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    LeftParen=3
    RightParen=4
    CurlyLeft=5
    CurlyRight=6
    Question=7
    Colon=8
    Comma=9
    Dot=10
    Assign=11
    Equal=12
    EqualEqual=13
    Plus=14
    PlusPlus=15
    Minus=16
    MinusMinus=17
    Star=18
    Div=19
    Mod=20
    And=21
    Or=22
    AndAnd=23
    OrOr=24
    Caret=25
    XOR=26
    AND=27
    Not=28
    Tilde=29
    Less=30
    LessEqual=31
    Greater=32
    GreaterEqual=33
    LeftShift=34
    RightShift=35
    IF=36
    FI=37
    ELSE=38
    FOR=39
    TO=40
    TO2=41
    ENDFOR=42
    DO=43
    WHILE=44
    OD=45
    CASE=46
    ESAC=47
    OF=48
    DEFINE=49
    RETURN=50
    NAME=51
    INT=52
    LineComment=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(intel_operation_languageParser.EOF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = intel_operation_languageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0):
                self.state = 40
                self.expression()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(intel_operation_languageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(intel_operation_languageParser.INT, 0)

        def ifExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.IfExpressionContext,0)


        def forExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ForExpressionContext,0)


        def doWhileExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.DoWhileExpressionContext,0)


        def functionExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.FunctionExpressionContext,0)


        def caseExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.CaseExpressionContext,0)


        def defineExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.DefineExpressionContext,0)


        def ternaryoperator(self):
            return self.getTypedRuleContext(intel_operation_languageParser.TernaryoperatorContext,0)


        def variable(self):
            return self.getTypedRuleContext(intel_operation_languageParser.VariableContext,0)


        def operator(self):
            return self.getTypedRuleContext(intel_operation_languageParser.OperatorContext,0)


        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def definitionExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.DefinitionExpressionContext,0)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = intel_operation_languageParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(intel_operation_languageParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.ifExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.forExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.doWhileExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.functionExpression()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.caseExpression()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.defineExpression()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.ternaryoperator()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 56
                self.variable()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 57
                self.operator()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 58
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 59
                    self.expression()
                    self.state = 62 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                        break

                self.state = 64
                self.match(intel_operation_languageParser.RightParen)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 66
                self.definitionExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(intel_operation_languageParser.VariableContext,0)


        def Assign(self):
            return self.getToken(intel_operation_languageParser.Assign, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_definitionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinitionExpression" ):
                listener.enterDefinitionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinitionExpression" ):
                listener.exitDefinitionExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitionExpression" ):
                return visitor.visitDefinitionExpression(self)
            else:
                return visitor.visitChildren(self)




    def definitionExpression(self):

        localctx = intel_operation_languageParser.DefinitionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definitionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.variable()
            self.state = 70
            self.match(intel_operation_languageParser.Assign)
            self.state = 72 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self.expression()

                else:
                    raise NoViableAltException(self)
                self.state = 74 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TernaryoperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def comparison(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ComparisonContext,0)


        def Question(self):
            return self.getToken(intel_operation_languageParser.Question, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def Colon(self):
            return self.getToken(intel_operation_languageParser.Colon, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_ternaryoperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTernaryoperator" ):
                listener.enterTernaryoperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTernaryoperator" ):
                listener.exitTernaryoperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTernaryoperator" ):
                return visitor.visitTernaryoperator(self)
            else:
                return visitor.visitChildren(self)




    def ternaryoperator(self):

        localctx = intel_operation_languageParser.TernaryoperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ternaryoperator)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 77
                self.comparison()
                self.state = 78
                self.match(intel_operation_languageParser.Question)
                self.state = 79
                self.expression()
                self.state = 80
                self.match(intel_operation_languageParser.Colon)
                self.state = 81
                self.expression()
                self.state = 82
                self.match(intel_operation_languageParser.RightParen)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 85
                self.comparison()
                self.state = 86
                self.match(intel_operation_languageParser.RightParen)
                self.state = 87
                self.match(intel_operation_languageParser.Question)
                self.state = 88
                self.expression()
                self.state = 89
                self.match(intel_operation_languageParser.Colon)
                self.state = 90
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.comparison()
                self.state = 93
                self.match(intel_operation_languageParser.Question)
                self.state = 94
                self.expression()
                self.state = 95
                self.match(intel_operation_languageParser.Colon)
                self.state = 96
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(intel_operation_languageParser.IF, 0)

        def comparison(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ComparisonContext,0)


        def FI(self):
            return self.getToken(intel_operation_languageParser.FI, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def ELSE(self):
            return self.getToken(intel_operation_languageParser.ELSE, 0)

        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_ifExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpression" ):
                listener.enterIfExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpression" ):
                listener.exitIfExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpression" ):
                return visitor.visitIfExpression(self)
            else:
                return visitor.visitChildren(self)




    def ifExpression(self):

        localctx = intel_operation_languageParser.IfExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(intel_operation_languageParser.IF)
            self.state = 101
            self.comparison()
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.expression()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                    break

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 107
                self.match(intel_operation_languageParser.ELSE)
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 108
                    self.expression()
                    self.state = 111 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                        break



            self.state = 115
            self.match(intel_operation_languageParser.FI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(intel_operation_languageParser.FOR, 0)

        def definitionExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.DefinitionExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,0)


        def ENDFOR(self):
            return self.getToken(intel_operation_languageParser.ENDFOR, 0)

        def TO(self):
            return self.getToken(intel_operation_languageParser.TO, 0)

        def TO2(self):
            return self.getToken(intel_operation_languageParser.TO2, 0)

        def forExpressionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ForExpressionExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ForExpressionExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_forExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForExpression" ):
                listener.enterForExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForExpression" ):
                listener.exitForExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForExpression" ):
                return visitor.visitForExpression(self)
            else:
                return visitor.visitChildren(self)




    def forExpression(self):

        localctx = intel_operation_languageParser.ForExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(intel_operation_languageParser.FOR)
            self.state = 118
            self.definitionExpression()
            self.state = 119
            _la = self._input.LA(1)
            if not(_la==40 or _la==41):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 120
            self.expression()
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.forExpressionExpression()
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                    break

            self.state = 126
            self.match(intel_operation_languageParser.ENDFOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForExpressionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_forExpressionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForExpressionExpression" ):
                listener.enterForExpressionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForExpressionExpression" ):
                listener.exitForExpressionExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForExpressionExpression" ):
                return visitor.visitForExpressionExpression(self)
            else:
                return visitor.visitChildren(self)




    def forExpressionExpression(self):

        localctx = intel_operation_languageParser.ForExpressionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forExpressionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(intel_operation_languageParser.DO, 0)

        def WHILE(self):
            return self.getToken(intel_operation_languageParser.WHILE, 0)

        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def OD(self):
            return self.getToken(intel_operation_languageParser.OD, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def doWhileExpressionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.DoWhileExpressionExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.DoWhileExpressionExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_doWhileExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileExpression" ):
                listener.enterDoWhileExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileExpression" ):
                listener.exitDoWhileExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileExpression" ):
                return visitor.visitDoWhileExpression(self)
            else:
                return visitor.visitChildren(self)




    def doWhileExpression(self):

        localctx = intel_operation_languageParser.DoWhileExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doWhileExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(intel_operation_languageParser.DO)
            self.state = 131
            self.match(intel_operation_languageParser.WHILE)
            self.state = 132
            self.match(intel_operation_languageParser.LeftParen)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.expression()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                    break

            self.state = 138
            self.match(intel_operation_languageParser.RightParen)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.doWhileExpressionExpression()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7398138562179080) != 0)):
                    break

            self.state = 144
            self.match(intel_operation_languageParser.OD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileExpressionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_doWhileExpressionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileExpressionExpression" ):
                listener.enterDoWhileExpressionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileExpressionExpression" ):
                listener.exitDoWhileExpressionExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileExpressionExpression" ):
                return visitor.visitDoWhileExpressionExpression(self)
            else:
                return visitor.visitChildren(self)




    def doWhileExpressionExpression(self):

        localctx = intel_operation_languageParser.DoWhileExpressionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doWhileExpressionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def NAME(self):
            return self.getToken(intel_operation_languageParser.NAME, 0)
